salesforce/metadata/objects/MSD_FieldMapping__mdt.object
<CustomMetadata>
    <label>MSD Field Mapping</label>
    <pluralLabel>MSD Field Mappings</pluralLabel>
    <fields>
        <fullName>MSD_ObjectMapping__c</fullName>
        <label>Object Mapping</label>
        <referenceTo>MSD_ObjectMapping__mdt</referenceTo>
        <relationshipLabel>Field Mappings</relationshipLabel>
        <relationshipName>FieldMappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourceFieldApi__c</fullName>
        <label>Source Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CanonicalField__c</fullName>
        <label>Canonical Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomMetadata>